| Summary: | ASTERISK-28385: res_ari_channels: Added detail hangup code settings | ||
| Reporter: | sungtae kim (pchero) | Labels: | |
| Date Opened: | 2019-04-15 18:24:36 | Date Closed: | 2019-06-27 12:05:53 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari_channels |
| Versions: | 16.3.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Currently, DELETE /ari/channels/<channelID> supports only few hangup reasons.
It's good enough for simple use, but when it needs to set the detail reason, it comes challenges. And setting reason text is not clear to use. Because of the Asterisk uses numbers for ChannelDestroyed event, use the reason code is easier to use. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-04-15 18:24:37.871-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2019-06-27 12:05:55.836-0500 Change 11287 merged by Friendly Automation: res/ari/resource_channels.c: Added hangup reason code for channels [https://gerrit.asterisk.org/c/asterisk/+/11287|https://gerrit.asterisk.org/c/asterisk/+/11287] | ||